# lamb

./: .github-ci.yml  .gitignore  404.html  CHANGELOG.md  CNAME  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  book.toml  control_flow.html  examples.lb  introduction.html  lamb  main.c  memory.c  memory.h  print.html  rustfmt.toml  searchindex.js  searchindex.json  syntax.html  types.h  values.html
ast/: ast.c  ast.h  (+2 more)
compiler/lamb/: Cargo.toml
compiler/lamb/src/: main.rs  optimization.rs  repl.rs
lamb-rs/: .gitignore  Cargo.toml  Cranky.toml  build.rs  fail.lb  fib.lb  wrapper.h
lamb-rs/lamb/: Cargo.toml
lamb-rs/lamb/src/: main.rs  optimization.rs  repl.rs  report.rs
lamb-rs/lamb_ast/: Cargo.toml
lamb-rs/lamb_ast/src/: lib.rs
lamb-rs/lamb_backends/: Cargo.toml
lamb-rs/lamb_backends/src/: backend.rs  js.rs  main.rs
lamb-rs/lamb_ffi/: Cargo.toml  build.rs  wrapper.h  wrapper.hpp
lamb-rs/lamb_ffi/src/: bindings.rs  convert.rs  lib.rs  repr.rs
lamb-rs/lamb_parse/: Cargo.toml
lamb-rs/lamb_parse/src/: error.rs  lib.rs  parse.rs  tokenize.rs
lamb-rs/lamb_vm/: Cargo.toml
lamb-rs/lamb_vm/src/: chunk.rs  compiler.rs  gc.rs  interner.rs  lib.rs  object.rs  value.rs  vm.rs
lamb-rs/src/: ast.rs  cli.rs  ffi.rs  main.rs  optimization.rs  parse.rs  repl.rs  report.rs  token.rs  tokenize.rs
lamb-rs/src/ffi/: bindings.rs  convert.rs  repr.rs
lamb-rs/test/: fail.lb  pattern_bindings.lb  pattern_test.lb  stack_diff_test.lb
lambc/: Cargo.toml
lambc/src/: cli.rs  main.rs  optimization.rs  repl.rs  report.rs
lambc_compiler/: Cargo.toml
lambc_compiler/src/: analysis.rs  lib.rs  module_parser.rs  name_res.rs  state.rs  type_check.rs
lambc_compiler/src/analysis/: limit_vec.rs  tree.rs
lambc_compiler/src/name_res/: pattern.rs
lambc_compiler/src/state/: diagnostics.rs  pathmap.rs
lambc_compiler/src/type_check/: check.rs  constraint.rs  constraints.rs  context.rs  env.rs  inference.rs  instantiate.rs  parsing.rs  scheme.rs  substitution.rs  tree.rs  types.rs  unification.rs
lambc_parse/: Cargo.toml
lambc_parse/src/: ast.rs  lib.rs  main.rs  node.rs  parse.rs  tokenize.rs
lambc_parse/src/snapshots/: lambc_parse__parse__tests__parse_nested_blocks-2.snap  lambc_parse__parse__tests__parse_nested_blocks.snap  lambc_parse__parse__tests__parses_array_pattern-2.snap  lambc_parse__parse__tests__parses_array_pattern-3.snap  lambc_parse__parse__tests__parses_array_pattern.snap  lambc_parse__parse__tests__parses_atom-10.snap  lambc_parse__parse__tests__parses_atom-11.snap  lambc_parse__parse__tests__parses_atom-12.snap  lambc_parse__parse__tests__parses_atom-13.snap  lambc_parse__parse__tests__parses_atom-14.snap  lambc_parse__parse__tests__parses_atom-2.snap  lambc_parse__parse__tests__parses_atom-3.snap  lambc_parse__parse__tests__parses_atom-4.snap  lambc_parse__parse__tests__parses_atom-5.snap  lambc_parse__parse__tests__parses_atom-6.snap  lambc_parse__parse__tests__parses_atom-7.snap  lambc_parse__parse__tests__parses_atom-8.snap  lambc_parse__parse__tests__parses_atom-9.snap  lambc_parse__parse__tests__parses_atom.snap  lambc_parse__parse__tests__parses_call-2.snap  lambc_parse__parse__tests__parses_call-3.snap  lambc_parse__parse__tests__parses_call.snap  lambc_parse__parse__tests__parses_export-2.snap  lambc_parse__parse__tests__parses_export-3.snap  lambc_parse__parse__tests__parses_export-4.snap  lambc_parse__parse__tests__parses_export-5.snap  lambc_parse__parse__tests__parses_export.snap  lambc_parse__parse__tests__parses_ident_pattern-2.snap  lambc_parse__parse__tests__parses_ident_pattern-3.snap  lambc_parse__parse__tests__parses_ident_pattern.snap  lambc_parse__parse__tests__parses_import-2.snap  lambc_parse__parse__tests__parses_import-3.snap  lambc_parse__parse__tests__parses_import-4.snap  lambc_parse__parse__tests__parses_import-5.snap  lambc_parse__parse__tests__parses_import-6.snap  lambc_parse__parse__tests__parses_import.snap  lambc_parse__parse__tests__parses_index-2.snap  lambc_parse__parse__tests__parses_index-3.snap  (+41 more)
lambc_vm/: Cargo.toml
lambc_vm/src/: bytecode.rs  chunk.rs  compiler.rs  exe.rs  gc.rs  lib.rs  value.rs  vm.rs
(+311 files in other folders)
