[package]
name = "lambc"
version = "0.1.0"
edition = "2021"
default-run = "lambc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lambc_ast = { path = "../lambc_ast" }
lambc_vm = { path = "../lambc_vm" }
lambc_parse = { path = "../lambc_parse" }
ariadne = { version = "0.3.0", features = ["auto-color"] }
clap = { version = "4.3.0", features = ["derive"] }
human-panic = "1.1.5"
rustyline = "13.0.0"
directories = "5.0.1"
