[package]
authors = ["Elijah Hartvigsen"]
name = "lambc"
version = "0.1.1"
edition = "2021"
default-run = "lambc"
repository = "https://github.com/Zij-IT/lamb"

[package.metadata.wix]
upgrade-guid = "2B3492D1-57D2-4690-AACD-B8F82C00F99B"
path-guid = "885C6F8A-7E25-44AD-BBD0-07E975424823"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lambc_vm = { path = "../lambc_vm" }
lambc_parse = { path = "../lambc_parse" }
ariadne = { version = "0.3.0", features = ["auto-color"] }
clap = { version = "4.3.0", features = ["derive"] }
human-panic = "1.1.5"
rustyline = "13.0.0"
directories = "5.0.1"
