[package]
name = "lambc_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15.1.0"
lambc_parse = { path = "../lambc_parse" }
miette = "7.2.0"
pretty_assertions = "1.4.0"
slotmap = "1.0.7"
thiserror = "1.0.56"
