[package]
name = "lambc_vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambc_parse = { path = "../lambc_parse" }
miette = "7.2.0"
rand = { version = "0.8.5", features = ["std"] }
thiserror = "1.0.56"
