[package]
name = "lamb"
version = "0.1.0"
edition = "2021"
default-run = "lamb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lamb_ast = { path = "../lamb_ast" }
lamb_vm = { path = "../lamb_vm" }
lamb_parse = { path = "../lamb_parse" }
ariadne = { version = "0.3.0", features = ["auto-color"] }
clap = { version = "4.3.0", features = ["derive"] }
human-panic = "1.1.5"
rustyline = "13.0.0"
directories = "5.0.1"
